fix light/dark mode

--- a/src/Pages/layout.css
+++ b/src/Pages/layout.css
@@ -1,5 +1,5 @@
 .background-welcome-page {
-    background-color: #FBF5F2;
+    background-color: var(--background-alt-brown-opera);
 }
 
 .centered-content {
